force-app/main/default/objects/gmpkg__GanttBaseline__c/gmpkg__GanttBaseline__c.object-meta.xml
<CustomObject>
    <label>Gantt Baseline</label>
    <nameField>
        <label>Baseline Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gantt Baselines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>