force-app/main/default/objects/gmpkg__GanttBaseline__c/fields/gmpkg__Description__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Description__c</fullName>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>