force-app/main/default/objects/gmpkg__GanttBaseline__c/fields/gmpkg__GanttId__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__GanttId__c</fullName>
    <label>Gantt Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>