force-app/main/default/objects/gmpkg__GanttBaseline__c/fields/gmpkg__Snapshot__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Snapshot__c</fullName>
    <label>Snapshot</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>